[tool.poetry]
name = "majong"
version = "0.1.0"
description = "mahjong game for AI development"
authors = ["mushcatshiro <yingjieho@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
